service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices1
spec:
  selector:
    app: ms1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: microservices2
spec:
  selector:
    app: ms2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: microservices3
spec:
  selector:
    app: ms4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3002

---
apiVersion: v1
kind: Service
metadata:
  name: microservices4
spec:
  selector:
    app: ms4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3003
