ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mohankrishna.co.in
    http:
      paths:
      - path: /ms1
        pathType: Prefix
        backend:
          service:
            name: microservices1-service
            port:
              number: 80
      - path: /ms2
        pathType: Prefix
        backend:
          service:
            name: microservices2-service
            port:
              number: 80
      - path: /ms3
        pathType: Prefix
        backend:
          service:
            name: microservices3-service
            port:
              number: 80
      - path: /ms4
        pathType: Prefix
        backend:
          service:
            name: microservices4-service
            port:
              number: 80
